--- a/06-properties-demo/src/main/resources/application.properties
+++ b/06-properties-demo/src/main/resources/application.properties
@@ -13,3 +13,9 @@ info.app.version=1.0.0
 
 coach.name=Mickey Mouse
 team.name=The Mouse Club
+
+# Change Spring Boot embedded server port
+server.port=7070
+
+# Set the context path of the application
+server.servlet.context-path=/mycoolapp
