--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.main.banner-mode=off
 
 #Reduce logging level
 logging.level.root=warn
+
+# Add logging configs to display SQL statments
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
