--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.level.root=warn
 # Add logging configs to display SQL statments
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#Configure JPA/Hibernate to auto create the tables
+spring.jpa.hibernate.ddl-auto=update
